@@ -52,6 +52,9 @@ Changes from 3.1.5 to 3.1.6
 
 15. Gawk should now work out of the box on Tandem NSK/OSS systems.
 
+16. Lint messages rationalized: many more of the messages are now printed
+    only once, instead of every time they are encountered.
+
 xx. Various bugs fixed, see the ChangeLog for details.
 
 Changes from 3.1.4 to 3.1.5
